--- a/ur5_gripper_moveit_config/config/fake_controllers.yaml
+++ b/ur5_gripper_moveit_config/config/fake_controllers.yaml
@@ -7,3 +7,6 @@ controller_list:
       - wrist_1_joint
       - wrist_2_joint
       - wrist_3_joint
+  - name: fake_end_effector_controller
+    joints:
+      - finger_joint
