fixed problem with urdf macro with joint limited

--- a/ur5_gripper_moveit_config/config/controllers.yaml
+++ b/ur5_gripper_moveit_config/config/controllers.yaml
@@ -9,12 +9,12 @@ controller_list:
       - wrist_1_joint
       - wrist_2_joint
       - wrist_3_joint
-  - name: endeffector_controller
-    action_ns: gripper_action
-    type: GripperCommand
-    default: true
-    joints:
-      - finger_joint
+#  - name: endeffector_controller
+#    action_ns: gripper_action
+#    type: GripperCommand
+#    default: true
+#    joints:
+#      - finger_joint
 
 
 initial:
