--- a/ur5_gripper_moveit_config/config/controllers.yaml
+++ b/ur5_gripper_moveit_config/config/controllers.yaml
@@ -17,6 +17,6 @@ controller_list:
 #      - finger_joint
 
 
-initial:
-  - group: manipulator
-    pose:  up
+#initial:
+#  - group: manipulator
+#    pose:  up
