Modified joint limits for pickup

--- a/icl_phri_ur5_gripper_moveit_config/config/controllers.yaml
+++ b/icl_phri_ur5_gripper_moveit_config/config/controllers.yaml
@@ -13,7 +13,7 @@ controller_list:
   - name: icl_phri_gripper
     action_ns: gripper_controller
     type: GripperCommand
-    default: true
+    default: false
     joints:
       - finger_joint
 
