--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
         "/opt/ros/kinetic/lib/python2.7/dist-packages"
     ],
     "python.formatting.provider": "autopep8",
-    "python.pythonPath": "/Users/davidgogh/.pyenv/versions/anaconda2-4.4.0/envs/anaconda2/bin/python"
+    "python.pythonPath": "/usr/bin/python3"
 }
