fix mongo ros cmakelist to build shared libs

--- a/warehouse_ros_mongo/CMakeLists.txt
+++ b/warehouse_ros_mongo/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(warehouse_ros_mongo)
-
+add_compile_options(-std=c++11)
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/")
 
 find_package(catkin REQUIRED
@@ -10,6 +10,8 @@ find_package(catkin REQUIRED
   std_msgs
   warehouse_ros
 )
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+set(Boost_USE_STATIC_LIBS OFF)
 find_package(Boost COMPONENTS system filesystem thread)
 find_package(OpenSSL)
 find_package(MongoDB)
