--- a/warehouse_ros/CMakeLists.txt
+++ b/warehouse_ros/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(warehouse_ros)
-
+add_compile_options(-std=c++11)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rostime
@@ -9,6 +9,8 @@ find_package(catkin REQUIRED COMPONENTS
   pluginlib
   tf
 )
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+set(Boost_USE_STATIC_LIBS OFF)
 find_package(Boost COMPONENTS system filesystem thread)
 
 catkin_package(
